SERVER-32397: Notify waiters on any movement of the oplog read timestamp.